# codex-telegram-bridge

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RELEASING.md  install.sh  pyproject.toml
.codex/: config.toml
.codex/agent-configs/: bridge-explorer.toml  bridge-reviewer.toml  bridge-worker.toml
.codex/agents/: bridge-explorer.toml  bridge-reviewer.toml  bridge-worker.toml
.github/release-notes/: v0.2.0.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.3.0.md  v0.3.1.md
.github/workflows/: ci.yml
references/: task-contract.md
src/codex_telegram_bridge/: __init__.py  app_server.py  approval.py  bot.py  bridge.py  cli.py  codex.py  config.py  control_bot.py  dashboard.py  deletions.py  delivery.py  discussion_bot.py  files.py  main.py  markdown.py  metrics.py  models.py  outbound.py  projector.py  resolver.py  rich_text.py  security.py  space_coordinator.py  status_bot.py  (+6 more)
systemd/: codex-telegram-app-server.service  codex-telegram-bridge.service
tests/: test_app_server.py  test_bot.py  test_bridge.py  test_cli.py  test_codex.py  test_control_workflows.py  test_core_config.py  test_core_files.py  test_core_security.py  test_core_store.py  test_dashboard.py  test_delivery.py  test_discussion_bot.py  test_discussion_commands.py  test_installer.py  test_main.py  test_markdown.py  test_metrics.py  test_outbound.py  test_polling.py  test_projector.py  test_release_docs.py  test_rich_text.py  test_space_coordinator.py  test_status_bot.py  test_status_migration.py  test_telegram_common.py  test_telegram_spaces.py  test_tmux.py  test_views.py  test_workloads.py
(+2 files in other folders)
