[build-system]
requires = ["hatchling>=1.28,<2"]
build-backend = "hatchling.build"

[project]
name = "codex-telegram-bridge"
version = "0.3.1"
description = "Secure Telegram control and live status bridge for local Codex CLI sessions"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "markdown-it-py==4.0.0",
  "psutil==7.2.2",
  "pyotp==2.10.0",
  "python-telegram-bot[rate-limiter]==22.5",
  "segno==1.6.6",
  "websockets==16.0",
]

[project.scripts]
codex-telegram-bridge = "codex_telegram_bridge.main:main"
codex-tg = "codex_telegram_bridge.cli:main"

[dependency-groups]
dev = [
  "pytest>=9.0,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=7.0,<8",
  "ruff>=0.15,<0.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codex_telegram_bridge"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/systemd",
  "/LICENSE",
  "/README.md",
  "/RELEASING.md",
  "/install.sh",
  "/pyproject.toml",
  "/uv.lock",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
